# ln-s

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: cli.rs  main.rs  symlink.rs
